--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body,html{
     width: 100%;
 }
 
+
 hr{
     width: 105%;
     border: 0;
@@ -41,6 +42,7 @@ hr{
     background: var(--darkgrayishblue);
     opacity: 0.2;
 }
+
 
 .content-wrapper{
     display: grid;
@@ -90,19 +92,23 @@ hr{
     font-size: 1.1em;
     line-height: 1.3;
     font-weight: 400;
-    width: 22vw;
+    width: 20vw;
 }
 
 .header{
     font-size: 2.4em;
 }
-.content-text > a{
-    text-decoration: none;
-    color: black;
+.content-text > button{
+    border:none;
+    background-color:transparent;
+    outline:none;
+    padding: 0px 5px 5px 0px;
+
 }
 
-.content-text > a:hover{
-    color:var(--softRed)
+.content-text > button:hover{
+    color:var(--softRed);
+    cursor: pointer;
 }
 
 .element{
@@ -121,6 +127,8 @@ hr{
     content: url('/images/icon-arrow-down.svg');
     transform: rotate(-180deg);
     transition: 0.5s;
+    float: right;
+    
 }
 
 @media only screen and (max-width: 759px) {
