--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ hr{
 .content-wrapper{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    min-height: 58vh;
-    min-width: 58vw;
+    height: 60vh;
+    width: 60vw;
     max-width: 65vw;
     background-color: #fff;
     border-radius: 1em;
@@ -87,34 +87,30 @@ hr{
 }
 
 
-.content-text{
+.content-text{ 
     margin: auto;
     font-size: 1.1em;
     line-height: 1.3;
     font-weight: 400;
-    width: 20vw;
+    width: 22vw;
 }
 
 .header{
     font-size: 2.4em;
 }
-.content-text > button{
+
+.reveal-elements{
+    text-align: left;
+    width: 100%;
     border:none;
     background-color:transparent;
     outline:none;
-    padding: 0px 5px 5px 0px;
-
+    padding: 4px 0px 4px 0px;
 }
 
-.content-text > button:hover{
+.reveal-elements:hover{
     color:var(--softRed);
     cursor: pointer;
-}
-
-.element{
-    color: var(--darkgrayishblue);
-    width: 100%;
-    display: none;
 }
 
 .reveal-elements::after{
@@ -122,12 +118,25 @@ hr{
     float: right;
 }
 
+.element{
+    color: var(--darkgrayishblue);
+    width: 100%;
+    overflow: hidden;
+    display: none;
+}
+
+.show{
+    display: block;
+}
+
+.bold{
+    font-weight: bold;
+}
 
 .flip::after{
     content: url('/images/icon-arrow-down.svg');
     transform: rotate(-180deg);
     transition: 0.5s;
-    float: right;
     
 }
 
@@ -141,9 +150,9 @@ hr{
 }
 
 .content-text{
-    font-size: 1em;
-    line-height: 1.2;
-    width: 85%;
+    width: 90%;
+    margin-top: -5em;
+    padding-bottom: 30px;
 }
 
 .woman{
@@ -155,7 +164,7 @@ hr{
      position: relative;
      height: auto;
      width: 90%;
-     transform: translate(0px, -70px);
+     transform: translate(0px, -90px);
  }
 
  .element{
@@ -166,7 +175,7 @@ hr{
     display: block;
     position: absolute;
     left: 49%;
-    top: 10%;
+    top: -2%;
     transform: translateX(-50%);
  }
 
