--- a/style.css
+++ b/style.css
@@ -47,12 +47,13 @@ hr{
 .content-wrapper{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    height: 60vh;
-    width: 60vw;
-    max-width: 65vw;
+    height: 68vh;
+    width: 55vw;
+    max-width: 100vw;
     background-color: #fff;
-    border-radius: 1em;
+    border-radius: 20px;
     position: relative;
+    box-shadow: 10px 15px 24px rgb(114, 79, 146);
 
 }
 
@@ -67,7 +68,7 @@ hr{
 .box{
     background-image:url('/images/illustration-box-desktop.svg');
     background-repeat: no-repeat;
-    transform: translate(-95px,-275px);
+    transform: translate(-95px,-330px);
     height: 30%;
 }
 
@@ -147,13 +148,14 @@ hr{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: auto;
+    height: 65vh;
+    width: 85vw;
 }
 
 .content-text{
     width: 90%;
-    margin-top: -5em;
-    padding-bottom: 30px;
+    margin-top: -4em;
+    margin-bottom: -2em;
 }
 
 .woman{
@@ -165,19 +167,26 @@ hr{
      position: relative;
      height: auto;
      width: 90%;
-     transform: translate(0px, -90px);
+     transform: translate(0px, -140px);
  }
 
  .element{
      padding: 0;
+     font: 1.2em;
+     line-height: 1.3;
  }
 
  .patternM{
     display: block;
     position: absolute;
     left: 49%;
-    top: -2%;
+    top: -30%;
     transform: translateX(-50%);
+ }
+
+ .reveal-elements{
+     padding: 5px 0px 5px 0px;
+     font-size: 1.1em;
  }
 
  .header{
