--- a/style.css
+++ b/style.css
@@ -47,9 +47,9 @@ hr{
 .content-wrapper{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    height: 68vh;
-    width: 55vw;
-    max-width: 100vw;
+    height: 38em;
+    width: 55em;
+    max-width: 65em;
     background-color: #fff;
     border-radius: 20px;
     position: relative;
@@ -60,7 +60,7 @@ hr{
 .content-pictures{
     background-image: url('/images/bg-pattern-desktop.svg');
     background-repeat: no-repeat;
-    background-position: -420px -260px;
+    background-position: -420px -240px;
     background-size: 800px 810px;
     position: relative;
 }
@@ -68,14 +68,15 @@ hr{
 .box{
     background-image:url('/images/illustration-box-desktop.svg');
     background-repeat: no-repeat;
-    transform: translate(-95px,-330px);
-    height: 30%;
+    background-position: center;
+    transform: translate(-215px,-330px);
+    height: 300px;
 }
 
 .woman{
     background-image: url('/images/illustration-woman-online-desktop.svg');
     background-repeat: no-repeat;
-    background-position: -86px 10px;
+    background-position: right 22px center;
     height: 100%;
 }
 
@@ -93,7 +94,7 @@ hr{
     font-size: 1.1em;
     line-height: 1.3;
     font-weight: 400;
-    width: 22vw;
+    width: 24em;
 }
 
 .header{
@@ -102,7 +103,7 @@ hr{
 
 .reveal-elements{
     text-align: left;
-    width: 100%;
+    width: 23em;
     border:none;
     background-color:transparent;
     outline:none;
@@ -118,6 +119,7 @@ hr{
 .reveal-elements::after{
     content: url('/images/icon-arrow-down.svg');
     float: right;
+    margin-right: 0px;
 }
 
 .element{
@@ -142,21 +144,48 @@ hr{
     
 }
 
-@media only screen and (max-width: 840px) {
+@media only screen and (min-width: 1150px){
+ .content-wrapper{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    height: 65vh;
+    width: 56vw;
+    max-width: 100vw;
+    background-color: #fff;
+    border-radius: 20px;
+    position: relative;
+    box-shadow: 10px 15px 24px rgb(114, 79, 146);
+
+    }
+    
+}
+
+@media only screen and (max-width: 760px) {
 .content-wrapper{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 69vh;
-    width: 85vw;
+    height: 40em;
+    width: 25em;
 }
 
 .content-text{
-    width: 90%;
+    width: 20.5em;
     margin-top: -4em;
     margin-bottom: -2em;
+} 
+
+hr{
+    width: 20.5em;
 }
+
+.reveal-elements::after{
+    content: url('/images/icon-arrow-down.svg');
+    float: right;
+    margin-right: 30px;
+}
+
 
 .woman{
     background-image: none;
@@ -166,8 +195,8 @@ hr{
      display: block;
      position: relative;
      height: auto;
-     width: 90%;
-     transform: translate(0px, -150px);
+     width: 18em;
+     transform: translate(-13px, -130px);
  }
 
  .element{
@@ -180,13 +209,12 @@ hr{
     display: block;
     position: absolute;
     left: 49%;
-    top: -30%;
+    top: -40%;
     transform: translateX(-50%);
  }
 
  .reveal-elements{
-     padding: 5px 0px 5px 0px;
-     font-size: 1.1em;
+     padding:0px;
  }
 
  .header{
